c/src/test/resources/c/nec_bnc/invalid/ex46-3.ctrl
<controlFile>
  <sourceFile name="../ex46.c" id="1" />
  <run>
    <startPosition fileId="1" line="12" />
    <wayPoint fileId="1" line="18" >
      <command>
        <cascadeFunction> cascade_assume </cascadeFunction>
        <argument><![CDATA[
          h > 0 && w > 0
        ]]>
        </argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="22" >
      <loop iterTimes="2" >
        <wayPoint fileId="1" line="23" >
          <command>
            <cascadeFunction> cascade_check </cascadeFunction>
            <argument><![CDATA[
              valid(&lut[0]) && valid(&lut[y])
            ]]>
            </argument>
          </command>
        </wayPoint>
      </loop>
    </wayPoint>
    
    <wayPoint fileId="1" line="25" >
      <command>
        <cascadeFunction> cascade_check </cascadeFunction>
        <argument><![CDATA[
          lut[0][h*w-1].x == lut[h-1][w-1].x
        ]]>
        </argument>
      </command>
    </wayPoint>
    
    <endPosition fileId="1" line="30" />
  </run>
</controlFile>